--- a/hata/index.html
+++ b/hata/index.html
@@ -136,14 +136,14 @@
                                             </label>
                                         </div>
                                     </div>
-                                    <div class="tab__col">
+                                    <div class="tab__col tab__liftup">
                                         <span class="tab__label">Цена USD</span>
                                         <div class="tab__row">
                                             <input class="tab__input" type="tel" placeholder="от">
                                             <input class="tab__input" type="tel" placeholder="до">
                                         </div>
                                     </div>
-                                    <div class="tab__col">
+                                    <div class="tab__col tab__liftup">
                                         <span class="tab__label">Город</span>
                                         <div class="tab__row">
                                             <div class="tab__select-wrap">
@@ -164,7 +164,7 @@
                                         </label>
                                     </div>
                                     <div class="tab__col">
-                                        <button type="submit" class="button button_green button_search">Найти</button>
+                                        <button type="submit" class="button button_green button_search tab__liftup">Найти</button>
                                     </div>
                                 </form>
                             </li>
@@ -203,14 +203,14 @@
                                             </label>
                                         </div>
                                     </div>
-                                    <div class="tab__col">
+                                    <div class="tab__col tab__liftup">
                                         <span class="tab__label">Цена USD</span>
                                         <div class="tab__row">
                                             <input class="tab__input" type="tel" placeholder="от">
                                             <input class="tab__input" type="tel" placeholder="до">
                                         </div>
                                     </div>
-                                    <div class="tab__col">
+                                    <div class="tab__col tab__liftup">
                                         <span class="tab__label">Город</span>
                                         <div class="tab__row">
                                             <div class="tab__select-wrap">
@@ -231,7 +231,7 @@
                                         </label>
                                     </div>
                                     <div class="tab__col">
-                                        <button type="submit" class="button button_green button_search">Найти</button>
+                                        <button type="submit" class="button button_green button_search tab__liftup">Найти</button>
                                     </div>
                                 </form>
                             </li>
@@ -275,7 +275,7 @@
                                                 </label>
                                             </div>
                                         </div>
-                                        <div class="tab__col">
+                                        <div class="tab__col tab__liftup">
                                             <span class="tab__label">Цена USD</span>
                                             <div class="tab__row">
                                                 <input class="tab__input" type="tel" placeholder="от">
@@ -283,7 +283,7 @@
                                             </div>
                                         </div>
                                         <div class="tab__col">
-                                            <span class="tab__label">Город</span>
+                                            <span class="tab__label tab__liftup">Город</span>
                                             <div class="tab__row">
                                                 <div class="tab__select-wrap">
                                                     <select class="tab__select">
@@ -308,7 +308,7 @@
                                             </div>
                                         </div>
                                         <div class="tab__col">
-                                            <button type="submit" class="button button_green button_search">Найти</button>
+                                            <button type="submit" class="button button_green button_search tab__liftup">Найти</button>
                                         </div>
                                     </div>
                                     <div class="tab__bottom">
