--- a/hata/item.html
+++ b/hata/item.html
@@ -176,10 +176,191 @@
                 </div>
                 <span class="item__post-data">860 просмотров за все время, 196 с мобильных | Сегодня 24, неделя 544, месяц 860 | Добавлено 21.04.2020</span>
                 <div class="item__body">
-                    
+                    <div class="item__slider">
+
+                    </div>
+                    <div class="item__card item__card_sb item__card_fe">
+                        <div class="item__price">
+                            <span class="item__price-price">$30 640</span>
+                            <span class="item__price-text">Цена действительна ТОЛЬКО при ссылке на hata.by</span>
+                        </div>
+                        <button class="button button_white button_subscribe">Подписаться на изменение цены</button>
+                    </div>
+                    <div class="item__card">
+                        <div class="item__card-row item__card_sb">
+                            <h3 class="item__subtitle">Квартира</h3>
+                            <table class="item__table">
+                                <tr>
+                                    <td>Площадь</td>
+                                    <td>40 м² (1 комната)</td>
+                                </tr>
+                                <tr>
+                                    <td>Адрес</td>
+                                    <td>г. Минск, ул. Притыцкого 97</td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="item__card-row item__card_sb">
+                            <h3 class="item__subtitle">Контакты</h3>
+                            <table class="item__table">
+                                <tr>
+                                    <td>Имя</td>
+                                    <td>40 м² (1 комната)</td>
+                                </tr>
+                                <tr>
+                                    <td>Почта</td>
+                                    <td><a href="mailto:Solo4i@mail.ru" class="item__table-link">Solo4i@mail.ru</a></td>
+                                </tr>
+                                <tr>
+                                    <td>Телефон</td>
+                                    <td><a href="tel:+375291111111" class="item__table-link">+375 29 1111111</a></td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="item__card-row item__card_sb">
+                            <button class="button button_green button_move">
+                                <svg width="25" height="16" viewBox="0 0 25 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M24.0642 13.5018H22.7445C22.5902 14.8329 21.4627 15.837 20.1229 15.837C18.7828 15.837 17.6556 14.8329 17.5012 13.5018H8.96747C8.81278 14.8329 7.68571 15.837 6.34591 15.837C5.00583 15.837 3.87876 14.8329 3.72408 13.5018H0.939695C0.696772 13.5018 0.499897 13.3049 0.499897 13.062V0.60461C0.499897 0.361686 0.696772 0.164673 0.939695 0.164673H16.2036C16.4463 0.164673 16.6433 0.361686 16.6433 0.60461V3.07217H20.3693C20.5131 3.07259 20.6478 3.14304 20.73 3.26147L23.136 6.70555L24.0772 8.02522L24.4204 8.51355C24.4718 8.58704 24.4995 8.67445 24.4998 8.7642V13.0489C24.5033 13.1669 24.459 13.2814 24.3771 13.3666C24.2952 13.452 24.1823 13.5007 24.0642 13.5018ZM20.1317 14.8213C21.1033 14.8213 21.8912 14.0335 21.8912 13.062C21.8912 12.0901 21.1033 11.3024 20.1317 11.3024C19.1599 11.3024 18.3721 12.0901 18.3721 13.062C18.3721 14.0372 19.1563 14.8314 20.1317 14.8434V14.8213ZM6.35473 14.8213C7.32643 14.8213 8.11434 14.0335 8.11434 13.062C8.11434 12.0901 7.32643 11.3024 6.35473 11.3024C5.38276 11.3024 4.59513 12.0901 4.59513 13.062C4.59499 14.0372 5.37932 14.8314 6.35473 14.8434V14.8213ZM1.38845 1.04441V8.92716H13.3311C13.5741 8.92716 13.7711 9.12403 13.7711 9.36696C13.7711 9.60988 13.5741 9.80689 13.3311 9.80689H1.38845V12.622H3.73276C3.88745 11.291 5.01466 10.2871 6.35473 10.2871C7.69454 10.2871 8.82174 11.291 8.97629 12.622H15.7637V3.04584H12.5879C12.345 3.04584 12.1479 2.84883 12.1479 2.6059C12.1479 2.36298 12.345 2.16597 12.5879 2.16597H15.7637V1.04441H1.38845ZM20.1404 3.95205H16.6215V12.622H17.5012C17.6556 11.291 18.7828 10.2871 20.1229 10.2871C21.4627 10.2871 22.5902 11.291 22.7445 12.622H23.6244V8.90496L23.4924 8.71581H18.1258C17.8828 8.71581 17.686 8.51907 17.686 8.27614V5.02108C17.686 4.77815 17.8828 4.58114 18.1258 4.58114H20.5892L20.1404 3.95205ZM21.2049 5.4697H18.5657V7.84489H22.881L21.2049 5.4697Z"/>
+                                </svg>
+                                Рассчитать переезд
+                            </button>
+                        </div>
+                    </div>
+                    <div class="item__data">
+                        <h3 class="item__subtitle">Описание</h3>
+                        <p class="item__text">Продается однокомнатная квартира по адресу Притыцкого, 97 в шаговой доступности от ст. м. `Каменная горка  -cпальных мест 2+2-WI-FI-удобная качественная новая мебель-телевизор ЖКИ, современная бытовая техника, утюг, гладильная доска, рядом с домом есть платная стоянка, удобное транспортное сообщение-развитая инфраструктура: дом находится напротив гипермаркета `АЛМИ`, ТРЦ `Green City`, казино `Maxbet`, `Olympic`, строительного гипермаркета `Материк`, мед. центра `ЛОДЭ`, недалеко рынок `Ждановичи`, авторынок `Малиновка`, МКАД-стоимость проживания зависит от длительности проживания и количества гостей-предоставление отчетных документов-УНП 193088071 ИП Соколович М. В. 80291871604 Ольга</p>
+                        <h3 class="item__subtitle">Информация о владельце</h3>
+                        <span class="item__post-data">Актуализация 10.05.2020</span>
+                        <ul class="item__list">
+                            <li>Собственник</li>
+                            <li>Данные актуальны</li>
+                            <li>Готов работать с агенством</li>
+                            <li>Предоставлен тех. паспорт</li>
+                            <li>Собственник</li>
+                            <li>Предоставлен тех. паспорт</li>
+                            <li>Готов работать с агенством</li>
+                        </ul>
+                    </div>
+                    <div class="item__card">
+                        <div class="item__card-row item__card_sb">
+                            <h3 class="item__subtitle">Характеристики объекта</h3>
+                            <table class="item__table item__table_sb">
+                                <tr>
+                                    <td>Этаж/Этажность</td>
+                                    <td>3/10</td>
+                                </tr>
+                                <tr>
+                                    <td>Комнат</td>
+                                    <td>1</td>
+                                </tr>
+                                <tr>
+                                    <td>Общая площадь</td>
+                                    <td>40 м</td>
+                                </tr>
+                                <tr>
+                                    <td>Жилая площадь</td>
+                                    <td>20 м</td>
+                                </tr>
+                                <tr>
+                                    <td>Площадь кухни</td>
+                                    <td>10 м</td>
+                                </tr>
+                                <tr>
+                                    <td>Балкон/Лоджия</td>
+                                    <td>Лоджия</td>
+                                </tr>
+                                <tr>
+                                    <td>Cанузел</td>
+                                    <td>Раздельный</td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="item__card-row item__card_sb">
+                            <h3 class="item__subtitle">Характеристики дома</h3>
+                            <table class="item__table item__table_sb">
+                                <tr>
+                                    <td>Тип дома</td>
+                                    <td>Панельный</td>
+                                </tr>
+                                <tr>
+                                    <td>Год постройки</td>
+                                    <td>2011</td>
+                                </tr>
+                                <tr>
+                                    <td>Планировка</td>
+                                    <td>Новостройка</td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="item__card-row item__card_sb">
+                            <h3 class="item__subtitle">Опции</h3>
+                            <table class="item__table item__table_sb">
+                                <tr>
+                                    <td>Мебель</td>
+                                    <td>Есть</td>
+                                </tr>
+                                <tr>
+                                    <td>Плита</td>
+                                    <td>Электрическая</td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="item__card-row item__card_sb">
+                            <h3 class="item__subtitle">Объявление</h3>
+                            <table class="item__table item__table_sb">
+                                <tr>
+                                    <td>Дата добавления</td>
+                                    <td>21.04.2020</td>
+                                </tr>
+                                <tr>
+                                    <td>Дата добавления</td>
+                                    <td>21.04.2020</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
+        <section class="map">
+            <div class="container">
+                <h2 class="map__title text_tac">Квартира на карте </h2>
+                <div class="map__top">
+                    <span class="map__text">
+                        <svg width="16" height="20" viewBox="0 0 16 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M8.00048 0C3.94084 0 0.637695 3.30314 0.637695 7.3632C0.637695 8.42222 0.854452 9.43334 1.28162 10.3687C3.12252 14.3971 6.65204 18.6501 7.69019 19.8575C7.76797 19.9478 7.88136 19.9998 8.00069 19.9998C8.12002 19.9998 8.23341 19.9478 8.31119 19.8575C9.34892 18.6503 12.8784 14.3975 14.72 10.3687C15.1473 9.43334 15.3639 8.42222 15.3639 7.3632C15.3635 3.30314 12.0603 0 8.00048 0ZM8.00048 11.1877C5.89165 11.1877 4.17581 9.47182 4.17581 7.36299C4.17581 5.25396 5.89165 3.53812 8.00048 3.53812C10.1093 3.53812 11.8252 5.25396 11.8252 7.36299C11.8254 9.47182 10.1095 11.1877 8.00048 11.1877Z" fill="#202932"/>
+                        </svg>
+                        г. Минск, ул. Притыцкого 97
+                    </span>
+                    <div class="map__location">
+                        <span class="map__text"><span class="map__text-light">Район</span>Фрунзенский</span>
+                        <span class="map__text"><span class="map__text-light">Микрорайон</span>Каменная горка</span>
+                        <span class="map__text"><span class="map__text-light">Метро</span>Каменная горка (100м)</span>
+                    </div>
+                </div>
+                <div class="map__body">
+                    <div class="map__objects">
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="results">
+            <div class="container">
+                <div class="results__wrap">
+                    <ul class="results__top">
+                        <li><button class="button button_results js-results-trigger active">Квартиры в этом доме (2)</button></li>
+                        <li><button class="button button_results js-results-trigger">На этой улице (10)</button></li>
+                        <li><button class="button button_results js-results-trigger">В этом микрорайоне (10)</button></li>
+                        <li><button class="button button_results js-results-trigger">Другие объекты пользователя (0)</button></li>
+                        <li><button class="button button_results js-results-trigger">Дубли объявления (3)</button></li>
+                    </ul>
+                    <div class="results__body js-results">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <div class="container">
