--- a/hata/apartments.html
+++ b/hata/apartments.html
@@ -45,11 +45,11 @@
             <div class="container">
                 <nav class="nav">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="./apartments.html" class="nav__link text_ttu">Продажа</a></li>
-                        <li class="nav__item"><a href="./apartments.html" class="nav__link text_ttu">Новостройки</a></li>
-                        <li class="nav__item"><a href="./apartments.html" class="nav__link text_ttu">Аренда</a></li>
-                        <li class="nav__item"><a href="./apartments.html" class="nav__link text_ttu">Земля</a></li>
-                        <li class="nav__item"><a href="./apartments.html" class="nav__link text_ttu">Офисы</a></li>
+                        <li class="nav__item"><a href="./item.html" class="nav__link text_ttu">Продажа</a></li>
+                        <li class="nav__item"><a href="./item.html" class="nav__link text_ttu">Новостройки</a></li>
+                        <li class="nav__item"><a href="./item.html" class="nav__link text_ttu">Аренда</a></li>
+                        <li class="nav__item"><a href="./item.html" class="nav__link text_ttu">Земля</a></li>
+                        <li class="nav__item"><a href="./item.html" class="nav__link text_ttu">Офисы</a></li>
                     </ul>
                 </nav>
                 <button class="types js-types">
@@ -289,7 +289,7 @@
                         </ul>
                     </div>
                     <div class="col-container col-container_four">
-                        <a href="#" class="top__item">
+                        <a href="./item.html" class="top__item">
                             <div class="top__head">
                                 <span class="top__head-price">883 USD/м<sup>2</sup></span>
                                 <span class="top__head-year">2014 г. п.</span>
@@ -315,7 +315,7 @@
                                 </label>
                             </div>
                         </a>
-                        <a href="#" class="top__item">
+                        <a href="./item.html" class="top__item">
                             <div class="top__head">
                                 <span class="top__head-price">883 USD/м<sup>2</sup></span>
                                 <span class="top__head-year">2014 г. п.</span>
@@ -341,7 +341,7 @@
                                 </label>
                             </div>
                         </a>
-                        <a href="#" class="top__item">
+                        <a href="./item.html" class="top__item">
                             <div class="top__head">
                                 <span class="top__head-price">883 USD/м<sup>2</sup></span>
                                 <span class="top__head-year">2014 г. п.</span>
@@ -367,7 +367,7 @@
                                 </label>
                             </div>
                         </a>
-                        <a href="#" class="top__item">
+                        <a href="./item.html" class="top__item">
                             <div class="top__head">
                                 <span class="top__head-price">883 USD/м<sup>2</sup></span>
                                 <span class="top__head-year">2014 г. п.</span>
@@ -400,7 +400,7 @@
                 <div class="container">
                     <div class="selling__wrap">
                         <div class="selling__main">
-                            <a href="#" class="apartment apartment_green">
+                            <a href="./item.html" class="apartment apartment_green">
                                 <div class="apartment__slider">
                                     <img src="./img/apart_1.jpg" alt="Квартира" class="apartment__img">
                                 </div>
@@ -454,7 +454,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="#" class="apartment apartment_green">
+                            <a href="./item.html" class="apartment apartment_green">
                                 <div class="apartment__slider">
                                     <img src="./img/apart_1.jpg" alt="Квартира" class="apartment__img">
                                 </div>
@@ -508,7 +508,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="#" class="apartment">
+                            <a href="./item.html" class="apartment">
                                 <div class="apartment__slider">
                                     <img src="./img/apart_1.jpg" alt="Квартира" class="apartment__img">
                                 </div>
@@ -562,7 +562,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="#" class="apartment">
+                            <a href="./item.html" class="apartment">
                                 <div class="apartment__slider">
                                     <img src="./img/apart_1.jpg" alt="Квартира" class="apartment__img">
                                 </div>
@@ -616,7 +616,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="#" class="apartment">
+                            <a href="./item.html" class="apartment">
                                 <div class="apartment__slider">
                                     <img src="./img/apart_1.jpg" alt="Квартира" class="apartment__img">
                                 </div>
