--- a/hata/apartments.html
+++ b/hata/apartments.html
@@ -181,30 +181,10 @@
                             </div>
                         </div>
                         <div class="filter__col">
-                            <select name="area" class="filter__select">
-                                <option value="none" hidden>Область</option>
-                                <option value="Область 2">Область 2</option>
-                                <option value="Область 2">Область 2</option>
-                                <option value="Область 2">Область 2</option>
-                            </select>
-                            <select name="district" class="filter__select">
-                                <option value="none" hidden>Район</option>
-                                <option value="Область 2">Область 2</option>
-                                <option value="Область 2">Область 2</option>
-                                <option value="Область 2">Область 2</option>
-                            </select>
-                            <select name="street" class="filter__select">
-                                <option value="none" hidden>Улица</option>
-                                <option value="Область 2">Область 2</option>
-                                <option value="Область 2">Область 2</option>
-                                <option value="Область 2">Область 2</option>
-                            </select>
-                            <select name="metro" class="filter__select">
-                                <option value="none" hidden>Метро</option>
-                                <option value="Область 2">Область 2</option>
-                                <option value="Область 2">Область 2</option>
-                                <option value="Область 2">Область 2</option>
-                            </select>
+                            <button type="button" class="button filter__select js-filter-popup">Область</button>
+                            <button type="button" class="button filter__select js-filter-popup">Район</button>
+                            <button type="button" class="button filter__select js-filter-popup">Улица</button>
+                            <button type="button" class="button filter__select js-filter-popup">Метро</button>
                         </div>
                     </div>
                     <div class="filter__row filter__row_fe">
@@ -697,16 +677,16 @@
                     <div class="footer__rates">
                         <div class="footer__socials">
                             <a href="#" class="footer__social">
-                                <img loading="lazy" src="./" alt="Соц. сеть" class="footer__social-img">
+                                <img loading="lazy" src="./img/vk.svg" alt="Соц. сеть" class="footer__social-img">
                             </a>
                             <a href="#" class="footer__social">
-                                <img loading="lazy" src="./" alt="Соц. сеть" class="footer__social-img">
+                                <img loading="lazy" src="./img/twitter.svg" alt="Соц. сеть" class="footer__social-img">
                             </a>
                             <a href="#" class="footer__social">
-                                <img loading="lazy" src="./" alt="Соц. сеть" class="footer__social-img">
+                                <img loading="lazy" src="./img/vk.svg" alt="Соц. сеть" class="footer__social-img">
                             </a>
                             <a href="#" class="footer__social">
-                                <img loading="lazy" src="./" alt="Соц. сеть" class="footer__social-img">
+                                <img loading="lazy" src="./img/twitter.svg" alt="Соц. сеть" class="footer__social-img">
                             </a>
                         </div>
                         <img loading="lazy" src="./img/ratings.png" alt="Рейтинг" class="footer__rate">
