--- a/hata/index.html
+++ b/hata/index.html
@@ -860,16 +860,16 @@
                     <div class="footer__rates">
                         <div class="footer__socials">
                             <a href="#" class="footer__social">
-                                <img loading="lazy" src="./" alt="Соц. сеть" class="footer__social-img">
+                                <img loading="lazy" src="./img/vk.svg" alt="Соц. сеть" class="footer__social-img">
                             </a>
                             <a href="#" class="footer__social">
-                                <img loading="lazy" src="./" alt="Соц. сеть" class="footer__social-img">
+                                <img loading="lazy" src="./img/twitter.svg" alt="Соц. сеть" class="footer__social-img">
                             </a>
                             <a href="#" class="footer__social">
-                                <img loading="lazy" src="./" alt="Соц. сеть" class="footer__social-img">
+                                <img loading="lazy" src="./img/vk.svg" alt="Соц. сеть" class="footer__social-img">
                             </a>
                             <a href="#" class="footer__social">
-                                <img loading="lazy" src="./" alt="Соц. сеть" class="footer__social-img">
+                                <img loading="lazy" src="./img/twitter.svg" alt="Соц. сеть" class="footer__social-img">
                             </a>
                         </div>
                         <img loading="lazy" src="./img/ratings.png" alt="Рейтинг" class="footer__rate">
